@@ -20,6 +20,7 @@ type shape =
   | Lazy
   | Class
   | Module of shape array
+  | Value of Obj.t
 
 val init_mod: string * int * int -> shape -> Obj.t
 val update_mod: shape -> Obj.t -> Obj.t -> unit
